add this project

--- a/order.css
+++ b/order.css
@@ -1,3 +1,10 @@
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    background-color: rgb(245, 246, 247);
+    
+}
 .options{
     margin-left: 20px;
     margin-bottom: 10px;
@@ -6,8 +13,8 @@
 
 .checkout-button {
     margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #c4a43b;
+    padding: 12px 21px;
+    background-color: #95440a;
     border-radius: 20px;
     color: white;
     border: none;
@@ -18,4 +25,51 @@
 }
 .checkout-button:hover {
     opacity: .6;    
+}
+.back{
+    margin-top: 20px;
+    margin-left: 70px;
+    padding: 10px 42px;
+    border-color: #95440a;
+    border-style: solid;
+    background-color: white;
+    border-radius: 20px;
+    color: #95440a;
+    cursor: pointer;
+    transition: .15 ease-in-out;
+    font-size: 18px;
+    font-weight: 600;
+}
+.back:hover{
+    background-color: #95440a;
+    color: white;
+}
+.payment-details{
+    display: inline-block;
+    background-color: #95440a;
+    height: 680px;
+    width: 600px;
+    padding: 20px;
+    color: white;
+}
+.payment-details h2, p{
+    margin-left: 150px;
+    margin-top: 10px;
+}
+.imgOrder img{
+    width: 500px;
+    border-radius: 400px;
+    margin-left: -300px;
+}
+a{
+    text-decoration: none;
+}
+.payment-option{
+    padding: 30px 50px;
+    margin-right: 50px;
+}
+input{
+    padding: 10px 20px;
+    margin-left: 10px;
+    margin-bottom: 4px;
 }
