--- a/nav.css
+++ b/nav.css
@@ -1,12 +1,13 @@
 *{
     margin: 0;
     padding: 0;
-    background: rgb(239, 230, 221);
     font-family: Arial, sans-serif;
 
 }
 #home{
     height: 698px;
+    background: rgb(239, 230, 221);
+
 }
 nav{
     background-color: transparent;
@@ -158,34 +159,151 @@ button:hover{
     justify-content: center;
     margin-left: 95px;
     
-}.container {
+}
+.image{
+    display: inline-block;
+    
+}
+.image img{
+    width: 500px;
+    height: 500px;
+    margin-right: 100px;
+    border-radius: 500px;
+}
+
+.login{
+    display: inline-block;
+    padding-left: 50px;
+    padding-right: 80px;
+    padding-top: 20px;
+    padding-bottom: 100px;
+    background-color: rgb(243, 239, 230);
+    align-self: center;
+    border-radius: 15px;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 50px;
+    margin-right: 350px;
+}
+.login img{
+    width: 70px;
+    border-radius: 70px;
+    margin-left: 110px;
+    margin-top: -800px;
+
+}
+.forms{
+    margin-top: 90px;
+}
+h2{
+    color: rgb(128, 123, 97);
+    font-size: 50px;
+    text-align: center;
+}
+.login .b1{
+    display: block;
+    margin-top: 18px;
+    border-radius: 3px;
+    padding-right: 75px;
+    color: gray;
+    border-style: solid;
+    background-color: transparent;
+    border-top: transparent;
+    border-right: transparent;
+    border-left: transparent;
+    border-bottom-color: black;
+
+}
+.login .sub{
+    padding: 10px;
+    margin-left: 100px;
+    background-color: blue;
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    transition: opacity .15s;
+    display: block;
+}
+.login .sub:hover{
+    opacity: .5;
+}
+.login a{
+    text-decoration: none;
+}
+.ord .container {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    background-color: rgb(245, 246, 247);
+    
+}
+.options{
+    margin-left: 20px;
+    margin-bottom: 10px;
     padding: 20px;
 }
-.options {
-    width: 45%;
-}
-.payment-details {
-    width: 45%;
-    background-color: rgb(211, 144, 44);
-}
-.payment-option {
-    margin-bottom: 10px;
-    display: none;
-}
-.payment-option input:checked + .details {
-    display: block;
-}
+
 .checkout-button {
     margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #4CAF50;
+    padding: 12px 21px;
+    background-color: #95440a;
+    border-radius: 20px;
     color: white;
     border: none;
     cursor: pointer;
+    transition: .15 ease-in-out;
+    font-size: 18px;
+    font-weight: 600;
 }
 .checkout-button:hover {
-    background-color: #45a049;
+    opacity: .6;    
+}
+.back{
+    margin-top: 20px;
+    margin-left: 70px;
+    padding: 10px 42px;
+    border-color: #95440a;
+    border-style: solid;
+    background-color: white;
+    border-radius: 20px;
+    color: #95440a;
+    cursor: pointer;
+    transition: .15 ease-in-out;
+    font-size: 18px;
+    font-weight: 600;
+}
+.back:hover{
+    background-color: #95440a;
+    color: white;
+}
+.payment-details{
+    display: inline-block;
+    background-color: #95440a;
+    height: 680px;
+    width: 600px;
+    padding: 20px;
+    color: white;
+}
+.payment-details h2, p{
+    margin-left: 150px;
+    margin-top: 10px;
+}
+.imgOrder img{
+    width: 500px;
+    border-radius: 400px;
+    margin-left: -300px;
+}
+a{
+    text-decoration: none;
+}
+.payment-option{
+    padding: 30px 50px;
+    margin-right: 50px;
+}
+input{
+    padding: 10px 20px;
+    margin-left: 10px;
+    margin-bottom: 4px;
 }
