add this project

--- a/nav.css
+++ b/nav.css
@@ -77,9 +77,9 @@ button{
     padding-right: 50px;
     padding-top: 10px;
     padding-bottom: 10px;
-    color: rgb(233, 214, 214);
+    color: white;
     font-weight: 600;
-    background-color: rgb(0, 119, 255);
+    background-color: #95440a;
     cursor: pointer;
     border: none;
     border-radius: 20px;
@@ -89,7 +89,7 @@ a {
     text-decoration: none;
 }
 button:hover{
-    background-color: rgb(23, 192, 234);
+    opacity: .8;;
 }
 .cont{
     height: 100vh;
@@ -126,7 +126,8 @@ button:hover{
     padding: 9px;
     border-radius: 10px;
     border: none;
-    background-color: rgb(0, 119, 255);
+    background-color: #95440a;
+    border-radius: 20px;
     color: white;
     font-weight: 600;
     font-size: 16px;
@@ -217,7 +218,7 @@ h2{
 .login .sub{
     padding: 10px;
     margin-left: 100px;
-    background-color: blue;
+    background-color: #95440a;
     color: white;
     font-weight: bold;
     border-radius: 5px;
